src/k8s/observability/otel-collector/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: otelcol-nodeport
  namespace: monitoring
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: otelcol-collector
    app.kubernetes.io/component: opentelemetry-collector
  ports:
    - name: otlp-http
      port: 4318
      targetPort: 4318
      nodePort: 30431
