src/k8s/observability/otel-collector/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otelcol-pve-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: otelcol-collector
      app.kubernetes.io/component: opentelemetry-collector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.3/32
        - ipBlock:
            cidr: 10.0.0.4/32
      ports:
        - protocol: TCP
          port: 4318
